===============================================================================
Changes for sound 
===============================================================================

********* version 2.08.02 (25032)
10/6/08 - subclass PiccoloPhetApplication to get new-style tabs
10/6/08 - [562] complete port to trunk versions of phetcommon and phetgraphics
9/25/08 - [562] begin port to trunk versions of phetcommon and phetgraphics
9/25/08 - begin tracking changes in this CHANGES.txt file
<note: unknown changes may have occurred between version 2.08.01 and 9/25/08>
********* version 2.08.01
7/19/07 - fix: On the Measure tab. the Reset on the Stopwatch doesn't clear unless you click twice. (workaround)

===============================================================================