@@ -2,6 +2,7 @@
 Changes for sound 
 ===============================================================================
 
+10/8/08 - use PhetApplicationConfig.launchSim
 ********* version 2.08.02 (25032)
 10/6/08 - subclass PiccoloPhetApplication to get new-style tabs
 10/6/08 - [562] complete port to trunk versions of phetcommon and phetgraphics
